@@ -24,6 +24,7 @@ GUI
 
 i18n
 	Added: i18n_getJsTranslations() function which allow to translate JS scripts
+	Added: onGetJsTranslations event allows the plugins to add their own JS translations
 	Added: New languages: Breton, Czech, Icelandic and Georgian (Requested languages)
 	Fixed: Don't throw any exception when a locale is not valid. Fallback to the default locale instead
 
